[package]
name = "grpc-calculator-example"
version = "0.1.0"
authors = ["Sanchayan Maity <maitysanchayan@gmail.com>"]

[dependencies]
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.*"
httpbis         = "0.4.1"
grpcio          = "0.2.1"
grpc            = "0.*"

[build-dependencies]
walkdir         = "2"
protoc-grpcio   = "0.1.0"
